tdf#162439: compare strings, not pointers

Change-Id: Id107eaee553531f49da4ad06c681a34cdc08e4da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171756
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 26931fa1ce1c22f0c54ab2916e9924b1c78f8efe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171999
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>